# infotennis_v2

./: .gitignore  PREFECT_GUIDE.md  README.md  config.yaml  main.py  prefect.yaml  pyproject.toml  requirements.txt  test_functions.py  test_s3_direct.py
config/: __init__.py  config.py  config.yaml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/staging/: _sources.yml  _stg_infotennis.yml  stg_atp_calendar_changes_test.sql  stg_atp_calendar_test.sql  stg_atp_tournament_results.sql  stg_atp_tournament_results_new.sql  stg_atp_tournaments.sql
flows/: atp_calendar_flow.py  atp_main_flow.py  atp_tournaments_flow.py  test_match_data.py  test_tournament_scraper.py
tasks/: __init__.py  load_to_motherduck.py  motherduck_load.py  s3_storage.py  scrape_atp_calendar.py
tasks/ingestion/: __init__.py  get_atp_calendar.py  get_atp_match_data.py  get_atp_tournament.py  get_atp_tournament_results.py  get_atp_tournaments.py
tasks/storage/: __init__.py  load_atp_calendar_motherduck.py  load_atp_tournament_results_motherduck.py  load_atp_tournaments_motherduck.py  motherduck_load.py  s3_storage.py
tasks/storage/sql/: load_atp_calendar.sql
tests/: test_flow.py
utils/: logger.py
